<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rage Maker</string>
    <string name="add">Add Image</string>
    <string name="add_pack">Add from image pack</string>
    <string name="add_other">Add from other source</string>
    <string name="scale">Scale</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="pack">Pack: </string>
    <string name="settings">Settings</string>
    <string name="settings_title">Comic Settings</string>
    <string name="panel_count">Panel count:</string>
    <string name="about">About</string>
    <string name="zoom">Set zoom</string>
    <string name="redo">Redo</string>
    <string name="remove">Remove</string>
    <string name="share">Share</string>
    <string name="mode_hand">Manipulate mode</string>
    <string name="mode_pencil">Free draw mode</string>
    <string name="mode_text">Type mode</string>
    <string name="mode_line">Line mode</string>
    <string name="mode_select_title">Select interaction mode</string>
    <string name="image_select_title">Select image to add</string>
    <string name="toback">Send to back</string>
    <string name="tofront">Bring to front</string>
    <string name="pen_color">Pen color</string>
    <string name="pen_width">Pen width</string>
    <string name="text_color">Text color</string>
    <string name="text_type">Text type</string>
    <string name="select_image">Select Image</string>
    <string name="select_font">Select Font Type</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="flipV">Flip Vertically</string>
    <string name="flipH">Flip Horizontally</string>
    <string name="settings_bg_color_confirm">Use Color</string>
    <string name="settings_default_color_confirm">Use Previous</string>
    <string name="settings_bg_color_dialog">Select Color</string>
    <string name="abouttext">\nGreek Translation:\nGeorge D. Flamours\nThis is open source software. Use it at your own risk.\nThe source code is available at the home page.</string>
    <string name="abouttitle">About Rage Comic Maker</string>
    <string name="report_bug">Report a Bug</string>
    <string name="home_page">Home Page</string>
    <string name="confirmation">Confirmation</string>
    <string name="clear_question">Clear comic?</string>
    <string name="select_object_first">Please select an image or text object first!</string>
    <string name="select_picture">Select picture</string>
    <string name="select_name">Enter file name</string>
    <string name="select_folder">Select Folder</string>
    <string name="select_layer_title">Select layer</string>
    <string name="select_layer_message">Please select if you want to add the image in front or behind the draw canvas.\nNOTE: You can change this later by selecting the object and long tapping it to bring up the object menu (also available as a menu option).</string>
    <string name="select_width">Pick a Width</string>
    <string name="select_zoom">Pick zoom level: </string>
    <string name="to_front">To Front</string>
    <string name="to_back">To Back</string>
    <string name="draw_grid">Draw grid</string>
    <string name="enter_text">Enter text</string>
    <string name="comic_saved_as">Comic saved as </string>
    <string name="comic_save_fail_1">Sorry, the comic could not be saved: generated bitmap is null!</string>
    <string name="comic_save_fail_2">There was an error while saving the comic: </string>
    <string name="error_adding_image">There was an error adding the image!</string>
    <string name="saved_end"> in the Pictures folder on the SD card. It should appear in the gallery shortly.</string>
    <string name="share_comic">Share Comic</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="naggerquestion">You have been using this application for a while. Care to share your experiences by rating us at the Android Market?</string>
    <string name="naggertitle">Please rate us!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="object_menu">Object Menu</string>
    <string name="built_in">Built-in rage faces</string>
    <string name="orientation">Orientation</string>
    <string name="rotate_auto">Automatic</string>
    <string name="rotate_portrait">Portrait</string>
    <string name="rotate_landscape">Landscape</string>
    <string name="saveformat">Save format</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="lock">Lock/Unlock</string>
    <string name="drafts">Drafts</string>
    <string name="draft_options">Draft options</string>
    <string name="autoload_question">Load last comic?</string>
    
</resources>
